# trustify

./: .gitignore  Cargo.toml  README.md  openapi.yaml
.github/workflows/: ci.yaml
common/auth/schema/: auth.json
common/auth/src/: devmode.rs
common/auth/src/authenticator/: config.rs
common/auth/src/client/provider/: openid.rs
etc/deploy/compose/: compose-otel.yaml  compose-sso-2.yaml  compose-sso.yaml
etc/deploy/compose/config/init-sso/: init.sh
etc/deploy/compose/config/init-sso/data/: client-n8n.json  trustify-realm.json
migration/tests/: previous.rs
modules/analysis/src/: model.rs
modules/analysis/src/endpoints/tests/: latest_filters.rs
modules/analysis/src/service/: mod.rs
modules/analysis/src/service/load/: mod.rs
modules/fundamental/src/ai/service/tools/: package_info.rs
modules/fundamental/src/purl/endpoints/: mod.rs
modules/fundamental/src/purl/service/: mod.rs  test.rs
modules/fundamental/src/sbom/endpoints/: test.rs
modules/fundamental/src/vulnerability/endpoints/: mod.rs
modules/fundamental/src/vulnerability/service/: mod.rs  test.rs
modules/fundamental/tests/advisory/csaf/: delete.rs  reingest.rs
modules/fundamental/tests/advisory/osv/: reingest.rs
modules/importer/: Cargo.toml
modules/ingestor/src/service/: mod.rs
modules/storage/: Cargo.toml
modules/storage/src/service/: fs.rs  s3.rs  test.rs
server/src/profile/: api.rs
test-context/: Cargo.toml
test-context/src/: lib.rs
trustd/: Cargo.toml
trustify-cli/: .dockerignore  Cargo.toml
xtask/src/: dataset.rs
