[package]
name = "trustify-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trustify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["blocking", "form", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync"] }
